# soloud

./: CMakeLists.txt
src/: CMakeLists.txt  main.py
src/c_api/: soloud_c.cpp
